# model/index.js
@@ -164,4 +164,50 @@ app.getSiteInfo = function(id, callback) {
 		})
 	})
 }
+
+/* GET TaskInfo. */
+var TaskINFO = function(VoyageName) {
+	return new Promise(function (resolve, reject) {
+		var c = mysql.createConnection(db);
+		var sql = "select XM_Task_INFO.*,XM_Site_INFO.SiteName from XM_Task_INFO inner join XM_Site_INFO on XM_Task_INFO.SiteID = XM_Site_INFO.id where XM_Task_INFO.VoyageName = '"+VoyageName+"' and XM_Task_INFO.SiteID = 1 and XM_Task_INFO.Type = 'CTD作业';";
+		c.connect();
+		c.query(sql, function(error, result) {
+			if (error) {
+				reject(error);
+			}else {
+				var Data = result;
+				resolve(Data);
+			}
+		});
+		c.end();
+	})
+}
+app.getTaskInfo = function(VoyageName, callback) {
+	TaskINFO(VoyageName).then(function(result) {
+		result[0].cast = '1';
+		var code = 0;
+		var message = "success";
+		callback(code, message, result);
+	})
+}
+
+/* GET Voyages. */
+app.getVoyages = function(VoyageName, callback) {
+	var c = mysql.createConnection(db);
+	var sql = "select id,VoyageName, SiteName, Longitude, Latidude from XM_Site_INFO where VoyageName = '"+VoyageName+"';";
+	c.connect();
+	c.query(sql, function(error, result) {
+		if (error) {console.log(error)}
+		if (result != '') {
+			var code = 0;
+			var message = "success";
+			callback(code, message, result);
+		}else {
+			var code = -1;
+			var message = "fail";
+			callback(code, message, result);
+		}
+	});
+	c.end();
+}
 module.exports = app;
